# guoba-network

./: README.md  pm2.json  pyproject.toml  ruff.toml  run.py
migrations/models/: 0_20250423094723_init.py  1_20250423102350_update.py  2_20250423104322_update.py
wocardo/: bot.py  command_tree.py  embeds.py  types.py
wocardo/cogs/: network.py  settings.py
wocardo/db/: config.py  models.py
